# github-rag

./: .gitignore  README.md
backend/: db.py  ingest.py  pyproject.toml  railway.json  retrieval.py  server.py  start.sh
web/: .env.example  auth.config.ts  auth.ts  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: Icons.tsx  globals.css  page.tsx
web/app/(auth)/components/: github-globe.tsx  rag-status.tsx  sign-in.tsx  user-card.tsx
web/app/(auth)/onboarding/: page.tsx
web/app/api/auth/[...nextauth]/: route.ts
web/app/api/auth/callback/github/: route.ts
web/app/chat/: layout.tsx  page.tsx
web/app/chat/components/: chat-window.tsx
web/components/ui/: globe.tsx  meteors.tsx  multi-step-loader.tsx
web/lib/: db.ts  globe.json  migrate.ts
web/migrations/: 0000_robust_the_captain.sql
web/migrations/meta/: 0000_snapshot.json  _journal.json
web/modules/user/: schema.ts
